--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "pinia-plugin-persistedstate": "^3.2.3",
     "postcss": "^8.4.45",
     "prettier": "^3.2.5",
+    "sass-embedded": "^1.78.0",
     "tailwindcss": "^3.4.10",
     "unplugin-auto-import": "^0.18.2",
     "unplugin-vue-components": "^0.27.4",
